:bug: cutting off text when printing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,6 +20,7 @@ article{
   p{
     margin-top: 1.5em;
     margin-bottom: 0;
+    box-sizing: border-box;
   }
 
   p:first-child{
